# dbt-assist

./: .env.test.example  .gitignore  CONFIG.md  Cargo.toml  PROXY_API.md  README.md
aliases/: all.yml  daily.yml  hourly.yml  monthly.yml  weekly.yml
src/: cli.rs  errors.rs  main.rs  util.rs  utils.rs  verbose.rs
src/api/: client.rs  direct.rs  gcp_function_proxy.rs  mod.rs  normal_proxy.rs  proxy.rs
src/commands/: alias.rs  init.rs  jobs.rs  manifest.rs  mod.rs  runs.rs  setup.rs  templates.rs
src/gcp/: client.rs
src/models/: alias.rs  config.rs  dbt_ls.rs  mod.rs  runs.rs  template.rs
templates/: proxy.jinja
