[package]
name = "dbt-assist"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "2"
comfy-table = "7"
config = "0.15.23"
dialoguer = "0.12.0"
directories = "6.0.0"
google-cloud-storage = { package="gcloud-storage", version="1.3.0" }
include_dir = "0.7"
minijinja = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yml = "0.0.12"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt"] }
httpmock = "0.7"
